feat: modify layout

--- a/src/layout/index.astro
+++ b/src/layout/index.astro
@@ -1,3 +1,6 @@
+---
+import Nav from './nav.astro'
+---
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -7,6 +10,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<Nav />
     <slot />
 	</body>
 </html>
