--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layout/index.astro'
+import Navigation from '../components/Navigation.astro'
 ---
+<Navigation />
 
 <Layout>
   <h1>My Astro Learning Blog</h1>
