--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,26 @@
 ---
 import Layout from '../layout/index.astro'
+import Navigation from '../components/Navigation.astro'
+
+const pageTitle = "About Me"
+const skillColor = "navy"
+const fontWeight = 300
+const textCase = "lowercase"
 ---
-<Layout>
+<Navigation />
+<Layout title={pageTitle}>
+  <h1>{pageTitle}</h1>
   <h1>About Me</h1>
   <h2>... and my new Astro site!</h2>
   <p>I am working through Astro;s introductory tutorial. This is the second page on my website, and it's the first one I built myself! </p>
   <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
 </Layout>
+
+<!-- <style define:vars={{skillColor, fontWeight, textCase}}>
+  h1 {
+    color: var(--skillColor);
+    font-size: 4rem;
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+  }
+</style> -->
