--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 ---
 import Layout from '../layout/index.astro'
+import Navigation from '../components/Navigation.astro'
 ---
+<Navigation />
+
 <Layout>
 	<h1>Astro</h1>
 </Layout>
