feat: modify layout

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,9 @@
 ---
 ---
-<>
-  <a style="display: inline-block; margin-right: 0.5rem;" href="/">Home</a>
-  <a style="display: inline-block; margin-right: 0.5rem;" href="/about">About</a>
-  <a style="display: inline-block; margin-right: 0.5rem;" href="/blog">Blog</a>
-</>
+<header>
+  <nav>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/blog">Blog</a>
+  </nav>
+</header>
