--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layout/index.astro'
 import Navigation from '../components/Navigation.astro'
+import Footer from '../components/Footer.astro'
 
 const pageTitle = "About Me"
 const skillColor = "navy"
@@ -8,6 +9,7 @@ const fontWeight = 300
 const textCase = "lowercase"
 ---
 <Navigation />
+
 <Layout title={pageTitle}>
   <h1>{pageTitle}</h1>
   <h1>About Me</h1>
@@ -15,6 +17,8 @@ const textCase = "lowercase"
   <p>I am working through Astro;s introductory tutorial. This is the second page on my website, and it's the first one I built myself! </p>
   <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
 </Layout>
+
+<Footer />
 
 <!-- <style define:vars={{skillColor, fontWeight, textCase}}>
   h1 {
