--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '../layout/index.astro'
-import Navigation from '../components/Navigation.astro'
+import Header from '../components/Header.astro'
 ---
-<Navigation />
+<Header />
 
 <Layout>
   <h1>My Astro Learning Blog</h1>
