--- a/src/layout/index.astro
+++ b/src/layout/index.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css'
 const { title } = Astro.props
+console.log(title)
 ---
 <html lang="en">
 	<head>
@@ -8,7 +9,7 @@ const { title } = Astro.props
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{ title || "Astro" }</title>
+		<title>{ title || "Astro"}</title>
 	</head>
 	<body>
     <slot />
