--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,10 @@
 ---
 import Layout from '../layout/index.astro'
 import Header from '../components/Header.astro'
+import BlogPost from '../components/BlogPost.astro'
+
+const allPosts = await Astro.glob('./posts/*.md')
+console.log("allPosts", allPosts)
 ---
 <Header />
 
@@ -8,8 +12,15 @@ import Header from '../components/Header.astro'
   <h1>My Astro Learning Blog</h1>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    <li><a href="/posts/post-1">Post 1</a></li>
+    <!-- <li><a href="/posts/post-1">Post 1</a></li>
     <li><a href="/posts/post-2">Post 2</a></li>
-    <li><a href="/posts/post-3">Post 3</a></li>
+    <li><a href="/posts/post-3">Post 3</a></li> -->
+    
+    <!-- once -->
+    <!-- {allPosts.map((post) => <li>
+      <a href={post.url}>{post.frontmatter.title}</a>
+    </li>)} -->
+    <!-- twice -->
+    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
 </Layout>
