--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -4,19 +4,20 @@ import Layout from '../../layout/index.astro'
 
 export async function getStaticPaths() {
   const allPosts = await Astro.glob("../posts/*.md")
-  return [
-    { params: {tag: "astro"}, props: { posts: allPosts}},
-    { params: {tag: "successes"}, props: { posts: allPosts} },
-    { params: {tag: "community"}, props: { posts: allPosts} },
-    { params: {tag: "blogging"}, props: { posts: allPosts} },
-    { params: {tag: "setbacks"}, props: { posts: allPosts} },
-    { params: {tag: "learning in public"}, props: { posts: allPosts} }
-  ]
+  const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
+
+  return uniqueTags.map((tag) => {
+    const filterPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag))
+    return {
+      params: { tag },
+      props: { posts: filterPosts }
+    }
+  })
 }
 
 const { tag } = Astro.params
+
 const { posts } = Astro.props
-const filterPosts = posts.filter((post) => post.frontmatter.tags.includes(tag))
 ---
 <Layout title={tag}>
   <h1>Post tagged with: {tag}</h1>
@@ -26,6 +27,6 @@ const filterPosts = posts.filter((post) => post.frontmatter.tags.includes(tag))
   </ul> -->
   <!-- twice -->
   <ul>
-    {filterPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
+    {posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
   </ul>
 </Layout>
