--- a/src/layout/index.astro
+++ b/src/layout/index.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css'
-const { title } = Astro.props
+const { title, pageTitle } = Astro.props
 ---
 <html lang="en">
 	<head>
@@ -11,6 +11,7 @@ const { title } = Astro.props
 		<title>{ title || "Astro"}</title>
 	</head>
 	<body>
+		<h1>{pageTitle}</h1>
     <slot />
 	</body>
 </html>
