--- a/src/layout/MarkdownPostLayout.astro
+++ b/src/layout/MarkdownPostLayout.astro
@@ -1,7 +1,34 @@
 ---
+import Layout from './index.astro'
 const { frontmatter } = Astro.props
+const { tags } = frontmatter
 ---
-<h1>{frontmatter.title}</h1>
-<p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
-<p>Written by {frontmatter.author}</p>
-<slot />
+<Layout pageTitle={frontmatter.title}>
+  <p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
+  <p>Written by {frontmatter.author}</p>
+  <slot />
+  <div class="tags">
+    {tags.map((tag) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)}
+  </div>
+</Layout>
+
+<style>
+  a {
+    color: #00539f;
+  }
+
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+  }
+  
+  .tag {
+    margin: 0.25em;
+    border: dotted 1px #a1a1a1;
+    border-radius: .5em;
+    padding: .5em 1em;
+    font-size: 1.15em;
+    background-color: #F8FCFD;
+  }
+</style>
