--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -11,9 +11,13 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
 ---
 <Layout title="Astro Tags page" pageTitle="Tags Index">
 <!-- {filterPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)} -->
-{tags.map((tag) => <div class="tags">
-  <a href={`/tags/${tag}`}>{tag}</a>  
-</div>)}
+<div class="tags">
+{tags.map((tag) => 
+  <p class="tag">
+    <a href={`/tags/${tag}`}>{tag}</a>  
+  </p>
+)}
+</div>
 </Layout>
 
 <style>
