--- a/src/layout/MarkdownPostLayout.astro
+++ b/src/layout/MarkdownPostLayout.astro
@@ -4,8 +4,12 @@ const { frontmatter } = Astro.props
 const { tags } = frontmatter
 ---
 <Layout pageTitle={frontmatter.title}>
-  <p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
-  <p>Written by {frontmatter.author}</p>
+  <p><em>{frontmatter.description}</em></p>
+  <p>{frontmatter.pubDate.slice(0,10)}</p>
+
+  <p>Written by: {frontmatter.author}</p>
+
+  <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} /> 
   <slot />
   <div class="tags">
     {tags.map((tag) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)}
