feat: astro island & blog dark theme

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro'
 import BlogPost from '../components/BlogPost.astro'
 
 const allPosts = await Astro.glob('./posts/*.md')
-console.log("allPosts", allPosts)
+// console.log("allPosts", allPosts)
 ---
 <Header />
 
