--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,12 @@
 ---
 import Navigation from './Navigation.astro'
 import Humburger from './Humburger.astro';
+import ThemeIcon from './ThemeIcon.astro';
 ---
 <header>
   <nav>
     <Humburger />
+    <ThemeIcon />
     <Navigation />
   </nav>
 </header>
