--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
 import Layout from '../layout/index.astro'
 import Header from '../components/Header.astro'
+import Greeting from '../components/Greeting.jsx'
 ---
 <Header />
 
 <Layout>
 	<h1>Astro</h1>
+	<!-- <Greeting messages={['Hi', 'Hello', 'Howdy', 'Hey there']}/> -->
+	<Greeting client:load messages={['Hi', 'Hello', 'Howdy', 'Hey there']}/>
 </Layout>
